# t265_reset

./: CMakeLists.txt  LICENSE  log.h  main.cpp
cmake/: FindLibUSB.cmake
